Page about finished

--- a/about.html
+++ b/about.html
@@ -237,6 +237,98 @@
           </ol>
         </nav>
       </section>
+      <section id="about-us">
+        <div class="container">
+          <div class="row">
+            <div class="offset-lg-1 col-lg-5">
+              <img src="/assets/img/about/girl smile.png" alt="" />
+            </div>
+            <div class="col-lg-6 pe-4">
+              <div class="section-title">
+                <p class="background-title">About us</p>
+                <span class="section-subtitle">_ About our University _</span>
+                <h2 class="section-bigtitle">
+                  We are innovative educational institution for students.
+                </h2>
+                <p class="section-text">
+                  Expanding significance of internet promoting. or lipsum as it
+                  is some times known, is dummy text used in laying out print,
+                  grap to an corpt or web designs.
+                </p>
+              </div>
+              <div class="about-video">
+                <img src="/assets/img/about/video girl.jpg" alt="" />
+                <a href="">
+                  <i class="fas fa-play"></i>
+                </a>
+                <div class="about-video-text">
+                  <h6>Check how we clean!</h6>
+                  <p>
+                    Reference site about Lorem Ipsum, giving <br />
+                    information on its origins.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="about-course">
+        <div class="container">
+          <div class="section-title">
+            <p class="background-title">Course</p>
+            <span class="section-subtitle">_ Our Popular Courses _</span>
+            <h2 class="section-bigtitle">
+              The largest selection of courses for learning for students
+            </h2>
+          </div>
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="about-course-card">
+                <i class="flaticon-give"></i>
+                <div class="about-course-card-text">
+                  <h3>
+                    <a href="#">
+                        Affordable Tuition</h3>
+                    </a>  
+                  <p>
+                    Highly competitive rates yet, located in heart of the
+                    Nation's Capital.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="about-course-card">
+                    <i class="flaticon-goal"></i>
+                  <div class="about-course-card-text">
+                    <h3>
+                      <a href="#">
+                        Success Driven</h3>
+                      </a>  
+                    <p>
+                        The experiential learning ensures professional student success.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="about-course-card">
+                    <i class="flaticon-presentation"></i>
+                  <div class="about-course-card-text">
+                    <h3>
+                      <a href="#">
+                        Business Partners</h3>
+                      </a>  
+                    <p>
+                        Align with internationally-recognized businesses every step.
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+        </div>
+      </section>
       <section id="registration">
         <div class="container">
           <div class="registration-content">
