--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
             </div>
             <ul class="mobile-navbar">
               <li class="mobile-dropdown">
-                <a>Home</a>
+                <a href="/index.html">Home</a>
                 <span class="fa fa-angle-down"></span>
                 <ul class="mobile-dropdown-content">
                   <li>
