--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </ul>
               </li>
               <li>
-                <a href="">About</a>
+                <a href="about.html">About</a>
               </li>
               <li class="mobile-dropdown">
                 <a>Course</a>
