Course filter and search are done

--- a/course.html
+++ b/course.html
@@ -28,7 +28,7 @@
     />
     <link rel="stylesheet" href="/assets/css/style.css" />
 
-    <title>About</title>
+    <title>Course</title>
   </head>
   <body>
     <header>
@@ -237,7 +237,31 @@
           </ol>
         </nav>
       </section>
-      <section id="course">
+      <div id="filter-search">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="filter">
+                <i class="fas fa-th"></i>
+                <i class="fas fa-list"></i>
+                <span class="results">Showing 1-6 of 6 results</span>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <form action="" method="POST">
+                <input
+                  type="search"
+                  name=""
+                  id=""
+                  placeholder="Enter your course"
+                />
+                <button type="submit" class="btn-usual">Search</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <section id="course" class="bg-gray pt-0">
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-lg-4">
