--- a/course.html
+++ b/course.html
@@ -242,8 +242,12 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="filter">
-                <i class="fas fa-th"></i>
-                <i class="fas fa-list"></i>
+                <a href="#">
+                  <i class="fas fa-th"></i>
+                </a>
+                <a href="#">
+                  <i class="fas fa-list"></i>
+                </a>
                 <span class="results">Showing 1-6 of 6 results</span>
               </div>
             </div>
@@ -265,16 +269,18 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-lg-4">
-              <div class="course-card">
+              <div class="course-card course-about">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc1.jpg" alt="" />
                 </div>
                 <div class="course-card-body">
-                  <span class="price"
-                    >Course Fee:
-                    <p>$59</p>
-                    <strong>$39</strong></span
-                  >
+                  <div class="price">
+                    <span>Course Fee:</span>
+                    <div class="course-amount">
+                      <p>$59</p>
+                      <strong>$39</strong>
+                    </div>
+                  </div>
                   <h6 class="course-name">
                     <a href="#"> User Experience Research & Design </a>
                   </h6>
@@ -305,16 +311,18 @@
               </div>
             </div>
             <div class="col-md-6 col-lg-4">
-              <div class="course-card">
+              <div class="course-card course-about">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc2.jpg" alt="" />
                 </div>
                 <div class="course-card-body">
-                  <span class="price"
-                    >Course Fee:
-                    <p>$59</p>
-                    <strong>$39</strong></span
-                  >
+                  <div class="price">
+                    <span>Course Fee:</span>
+                    <div class="course-amount">
+                      <p>$59</p>
+                      <strong>$39</strong>
+                    </div>
+                  </div>
                   <h6 class="course-name">
                     <a href="#"> Copyright Law in Music Course </a>
                   </h6>
@@ -345,16 +353,18 @@
               </div>
             </div>
             <div class="col-md-6 col-lg-4">
-              <div class="course-card">
+              <div class="course-card course-about">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc3.jpg" alt="" />
                 </div>
                 <div class="course-card-body">
-                  <span class="price"
-                    >Course Fee:
-                    <p>$59</p>
-                    <strong>$39</strong></span
-                  >
+                  <div class="price">
+                    <span>Course Fee:</span>
+                    <div class="course-amount">
+                      <p>$59</p>
+                      <strong>$39</strong>
+                    </div>
+                  </div>
                   <h6 class="course-name">
                     <a href=""> Master of Public Health Course </a>
                   </h6>
@@ -385,16 +395,18 @@
               </div>
             </div>
             <div class="col-md-6 col-lg-4">
-              <div class="course-card">
+              <div class="course-card course-about">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc4.jpg" alt="" />
                 </div>
                 <div class="course-card-body">
-                  <span class="price"
-                    >Course Fee:
-                    <p>$59</p>
-                    <strong>$39</strong></span
-                  >
+                  <div class="price">
+                    <span>Course Fee:</span>
+                    <div class="course-amount">
+                      <p>$59</p>
+                      <strong>$39</strong>
+                    </div>
+                  </div>
                   <h6 class="course-name">
                     <a href=""> User Experience Research & Design </a>
                   </h6>
@@ -425,56 +437,18 @@
               </div>
             </div>
             <div class="col-md-6 col-lg-4">
-              <div class="course-card">
-                <div class="course-card-header">
-                  <img src="/assets/img/card/pc5.jpg" alt="" />
-                </div>
-                <div class="course-card-body">
-                  <span class="price"
-                    >Course Fee:
-                    <p>$59</p>
-                    <strong>$39</strong></span
-                  >
-                  <h6 class="course-name">
-                    <a href=""> Digital Marketing and SMM Course </a>
-                  </h6>
-                  <div class="counts">
-                    <a>
-                      <i class="fas fa-file"></i>
-                      14 Lessons
-                    </a>
-                    <a>
-                      <i class="fas fa-user"></i>
-                      20 Students
-                    </a>
-                  </div>
-                </div>
-                <div class="course-card-footer">
-                  <div class="votes">
-                    <ul>
-                      <li><i class="fas fa-star"></i></li>
-                      <li><i class="fas fa-star"></i></li>
-                      <li><i class="fas fa-star"></i></li>
-                      <li><i class="fas fa-star"></i></li>
-                      <li><i class="fas fa-star"></i></li>
-                    </ul>
-                    <span>(12) Votes</span>
-                  </div>
-                  <a class="course-btn"><i class="fas fa-chevron-right"></i></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="course-card">
+              <div class="course-card course-about">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc6.jpg" alt="" />
                 </div>
                 <div class="course-card-body">
-                  <span class="price"
-                    >Course Fee:
-                    <p>$59</p>
-                    <strong>$39</strong></span
-                  >
+                  <div class="price">
+                    <span>Course Fee:</span>
+                    <div class="course-amount">
+                      <p>$59</p>
+                      <strong>$39</strong>
+                    </div>
+                  </div>
                   <h6 class="course-name">
                     <a href=""> Graphic Design and Logo Design Course </a>
                   </h6>
@@ -505,16 +479,60 @@
               </div>
             </div>
             <div class="col-md-6 col-lg-4">
-              <div class="course-card">
+              <div class="course-card course-about">
+                <div class="course-card-header">
+                  <img src="/assets/img/card/pc5.jpg" alt="" />
+                </div>
+                <div class="course-card-body">
+                  <div class="price">
+                    <span>Course Fee:</span>
+                    <div class="course-amount">
+                      <p>$59</p>
+                      <strong>$39</strong>
+                    </div>
+                  </div>
+                  <h6 class="course-name">
+                    <a href=""> Digital Marketing and SMM Course </a>
+                  </h6>
+                  <div class="counts">
+                    <a>
+                      <i class="fas fa-file"></i>
+                      14 Lessons
+                    </a>
+                    <a>
+                      <i class="fas fa-user"></i>
+                      20 Students
+                    </a>
+                  </div>
+                </div>
+                <div class="course-card-footer">
+                  <div class="votes">
+                    <ul>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                    </ul>
+                    <span>(12) Votes</span>
+                  </div>
+                  <a class="course-btn"><i class="fas fa-chevron-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <div class="course-card course-about">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc7.jpg" alt="" />
                 </div>
                 <div class="course-card-body">
-                  <span class="price"
-                    >Course Fee:
-                    <p>$59</p>
-                    <strong>$39</strong></span
-                  >
+                  <div class="price">
+                    <span>Course Fee:</span>
+                    <div class="course-amount">
+                      <p>$59</p>
+                      <strong>$39</strong>
+                    </div>
+                  </div>
                   <h6 class="course-name">
                     <a href=""> Computer Basic Startup Ultricies Vitae </a>
                   </h6>
@@ -545,16 +563,60 @@
               </div>
             </div>
             <div class="col-md-6 col-lg-4">
-              <div class="course-card">
+              <div class="course-card course-about">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc8.jpg" alt="" />
                 </div>
                 <div class="course-card-body">
-                  <span class="price"
-                    >Course Fee:
-                    <p>$59</p>
-                    <strong>$39</strong></span
-                  >
+                  <div class="price">
+                    <span>Course Fee:</span>
+                    <div class="course-amount">
+                      <p>$59</p>
+                      <strong>$39</strong>
+                    </div>
+                  </div>
+                  <h6 class="course-name">
+                    <a href=""> Molecular Biology, Biotechnology Courses </a>
+                  </h6>
+                  <div class="counts">
+                    <a>
+                      <i class="fas fa-file"></i>
+                      14 Lessons
+                    </a>
+                    <a>
+                      <i class="fas fa-user"></i>
+                      20 Students
+                    </a>
+                  </div>
+                </div>
+                <div class="course-card-footer">
+                  <div class="votes">
+                    <ul>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                    </ul>
+                    <span>(12) Votes</span>
+                  </div>
+                  <a class="course-btn"><i class="fas fa-chevron-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <div class="course-card course-about">
+                <div class="course-card-header">
+                  <img src="/assets/img/card/pc9.jpg" alt="" />
+                </div>
+                <div class="course-card-body">
+                  <div class="price">
+                    <span>Course Fee:</span>
+                    <div class="course-amount">
+                      <p>$59</p>
+                      <strong>$39</strong>
+                    </div>
+                  </div>
                   <h6 class="course-name">
                     <a href=""> Molecular Biology, Biotechnology Courses </a>
                   </h6>
