Course page all things are done

--- a/course.html
+++ b/course.html
@@ -240,7 +240,7 @@
       <div id="filter-search">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 mb-3">
               <div class="filter">
                 <a href="#">
                   <i class="fas fa-th"></i>
@@ -647,10 +647,11 @@
               </div>
             </div>
           </div>
-          <a href="#" class="btn-usual"
-            >All Course
-            <i class="fas fa-arrow-right"></i>
-          </a>
+          <ul class="pagination">
+            <li><a href="#">01</a></li>
+            <li><a href="#">02</a></li>
+            <li><a href="#">03</a></li>
+          </ul>
         </div>
       </section>
     </main>
