Page blog created

--- a/about.html
+++ b/about.html
@@ -258,7 +258,10 @@
               </div>
               <div class="about-video">
                 <img src="/assets/img/about/video girl.jpg" alt="" />
-                <a href="">
+                <a data-fancybox="video"
+                data-type="iframe"
+                data-src="https://www.youtube.com/embed/gUYjYEGbxEY?autoplay=1"
+                href="https://www.youtube.com/watch?v=gUYjYEGbxEY">
                   <i class="fas fa-play"></i>
                 </a>
                 <div class="about-video-text">
