Page instructors created

--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
     />
     <link rel="stylesheet" href="/assets/css/style.css" />
 
-    <title>Course</title>
+    <title>Blog</title>
   </head>
   <body>
     <header>
@@ -233,7 +233,7 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Course</li>
+            <li class="breadcrumb-item active" aria-current="page">Blog</li>
           </ol>
         </nav>
       </section>
