Page Blog Details created

--- a/course-details.html
+++ b/course-details.html
@@ -28,7 +28,7 @@
     />
     <link rel="stylesheet" href="/assets/css/style.css" />
 
-    <title>Course-Details</title>
+    <title>Course Details</title>
   </head>
   <body>
     <header>
