Fade animations are added

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    <link rel="stylesheet" href="/assets/css/animate.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
 
     <title>Home</title>
@@ -373,6 +370,69 @@
             </h2>
           </div>
           <div class="categories-slider owl-carousel owl-theme">
+            <div
+              class="category-item wow fadeInUp"
+              data-wow-delay="0ms"
+              data-wow-duration="1500ms"
+            >
+              <div class="category-item-header">
+                <div class="category-icon">
+                  <i class="flaticon-atom"></i>
+                </div>
+                <div class="category-text">
+                  <h4>Computer Science</h4>
+                  <span>14 Courses</span>
+                </div>
+              </div>
+              <div class="category-item-body">
+                <img src="/assets/img/top categories 2.jpg" alt="" />
+              </div>
+              <a href="#" class="item-hover-link">
+                <span>+</span>
+              </a>
+            </div>
+            <div
+              class="category-item wow fadeInUp"
+              data-wow-delay="200ms"
+              data-wow-duration="1500ms"
+            >
+              <div class="category-item-header">
+                <div class="category-icon">
+                  <i class="flaticon-design"></i>
+                </div>
+                <div class="category-text">
+                  <h4>UI/UX Design</h4>
+                  <span>14 Courses</span>
+                </div>
+              </div>
+              <div class="category-item-body">
+                <img src="/assets/img/top categories 3.jpg" alt="" />
+              </div>
+              <a href="#" class="item-hover-link">
+                <span>+</span>
+              </a>
+            </div>
+            <div
+              class="category-item wow fadeInUp"
+              data-wow-delay="300ms"
+              data-wow-duration="1500ms"
+            >
+              <div class="category-item-header">
+                <div class="category-icon">
+                  <i class="flaticon-global-network"></i>
+                </div>
+                <div class="category-text">
+                  <h4>Language Learning</h4>
+                  <span>14 Courses</span>
+                </div>
+              </div>
+              <div class="category-item-body">
+                <img src="/assets/img/top categories 1.jpg" alt="" />
+              </div>
+              <a href="#" class="item-hover-link">
+                <span>+</span>
+              </a>
+            </div>
             <div class="category-item">
               <div class="category-item-header">
                 <div class="category-icon">
@@ -386,7 +446,9 @@
               <div class="category-item-body">
                 <img src="/assets/img/top categories 2.jpg" alt="" />
               </div>
-              <a href="#" class="item-hover-link">+</a>
+              <a href="#" class="item-hover-link">
+                <span>+</span>
+              </a>
             </div>
             <div class="category-item">
               <div class="category-item-header">
@@ -401,7 +463,9 @@
               <div class="category-item-body">
                 <img src="/assets/img/top categories 3.jpg" alt="" />
               </div>
-              <a href="#" class="item-hover-link">+</a>
+              <a href="#" class="item-hover-link">
+                <span>+</span>
+              </a>
             </div>
             <div class="category-item">
               <div class="category-item-header">
@@ -416,52 +480,9 @@
               <div class="category-item-body">
                 <img src="/assets/img/top categories 1.jpg" alt="" />
               </div>
-              <a href="#" class="item-hover-link">+</a>
-            </div>
-            <div class="category-item">
-              <div class="category-item-header">
-                <div class="category-icon">
-                  <i class="flaticon-atom"></i>
-                </div>
-                <div class="category-text">
-                  <h4>Computer Science</h4>
-                  <span>14 Courses</span>
-                </div>
-              </div>
-              <div class="category-item-body">
-                <img src="/assets/img/top categories 2.jpg" alt="" />
-              </div>
-              <a href="#" class="item-hover-link">+</a>
-            </div>
-            <div class="category-item">
-              <div class="category-item-header">
-                <div class="category-icon">
-                  <i class="flaticon-design"></i>
-                </div>
-                <div class="category-text">
-                  <h4>UI/UX Design</h4>
-                  <span>14 Courses</span>
-                </div>
-              </div>
-              <div class="category-item-body">
-                <img src="/assets/img/top categories 3.jpg" alt="" />
-              </div>
-              <a href="#" class="item-hover-link">+</a>
-            </div>
-            <div class="category-item">
-              <div class="category-item-header">
-                <div class="category-icon">
-                  <i class="flaticon-global-network"></i>
-                </div>
-                <div class="category-text">
-                  <h4>Language Learning</h4>
-                  <span>14 Courses</span>
-                </div>
-              </div>
-              <div class="category-item-body">
-                <img src="/assets/img/top categories 1.jpg" alt="" />
-              </div>
-              <a href="#" class="item-hover-link">+</a>
+              <a href="#" class="item-hover-link">
+                <span>+</span>
+              </a>
             </div>
           </div>
         </div>
@@ -476,7 +497,11 @@
             </h2>
           </div>
           <div class="row">
-            <div class="col-md-6 col-lg-4 col-xl-3">
+            <div
+              class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp"
+              data-wow-delay="0ms"
+              data-wow-duration="1500ms"
+            >
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc1.jpg" alt="" />
@@ -516,7 +541,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 col-xl-3">
+            <div
+              class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp"
+              data-wow-delay="100ms"
+              data-wow-duration="1500ms"
+            >
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc2.jpg" alt="" />
@@ -556,7 +585,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 col-xl-3">
+            <div
+              class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp"
+              data-wow-delay="200ms"
+              data-wow-duration="1500ms"
+            >
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc3.jpg" alt="" />
@@ -596,7 +629,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 col-xl-3">
+            <div
+              class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp"
+              data-wow-delay="300"
+              data-wow-duration="1500ms"
+            >
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc4.jpg" alt="" />
@@ -636,7 +673,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 col-xl-3">
+            <div
+              class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp"
+              data-wow-delay="400ms"
+              data-wow-duration="1500ms"
+            >
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc5.jpg" alt="" />
@@ -676,7 +717,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 col-xl-3">
+            <div
+              class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp"
+              data-wow-delay="500ms"
+              data-wow-duration="1500ms"
+            >
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc6.jpg" alt="" />
@@ -716,7 +761,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 col-xl-3">
+            <div
+              class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp"
+              data-wow-delay="600ms"
+              data-wow-duration="1500ms"
+            >
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc7.jpg" alt="" />
@@ -756,7 +805,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 col-xl-3">
+            <div
+              class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp"
+              data-wow-delay="700ms"
+              data-wow-duration="1500ms"
+            >
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc8.jpg" alt="" />
@@ -806,7 +859,11 @@
       <section id="registration">
         <div class="container">
           <div class="registration-content">
-            <div class="girl">
+            <div
+              class="girl wow fadeInRight"
+              data-wow-delay="0ms"
+              data-wow-duration="1500ms"
+            >
               <img src="/assets/img/reklam banner girl.png" alt="" />
             </div>
             <div class="registration-text">
@@ -830,7 +887,11 @@
             </h2>
           </div>
           <div class="testimonials-slider owl-carousel owl-theme">
-            <div class="testimonials-item">
+            <div
+              class="testimonials-item wow fadeInUp"
+              data-wow-delay="0ms"
+              data-wow-duration="1500ms"
+            >
               <div class="quoute-icon">
                 <i class="fas fa-quote-right"></i>
               </div>
@@ -851,7 +912,11 @@
                 </div>
               </div>
             </div>
-            <div class="testimonials-item">
+            <div
+              class="testimonials-item wow fadeInUp"
+              data-wow-delay="200ms"
+              data-wow-duration="1500ms"
+            >
               <div class="quoute-icon">
                 <i class="fas fa-quote-right"></i>
               </div>
@@ -872,7 +937,11 @@
                 </div>
               </div>
             </div>
-            <div class="testimonials-item">
+            <div
+              class="testimonials-item wow fadeInUp"
+              data-wow-delay="400ms"
+              data-wow-duration="1500ms"
+            >
               <div class="quoute-icon">
                 <i class="fas fa-quote-right"></i>
               </div>
@@ -893,7 +962,11 @@
                 </div>
               </div>
             </div>
-            <div class="testimonials-item">
+            <div
+              class="testimonials-item wow fadeInUp"
+              data-wow-delay="600ms"
+              data-wow-duration="1500ms"
+            >
               <div class="quoute-icon">
                 <i class="fas fa-quote-right"></i>
               </div>
@@ -1011,7 +1084,11 @@
             </h2>
           </div>
           <div class="latset-news-slider owl-carousel owl-theme">
-            <div class="news-item">
+            <div
+              class="news-item wow fadeInLeft"
+              data-wow-delay="0ms"
+              data-wow-duration="1500ms"
+            >
               <div class="news-img-date">
                 <div class="news-img">
                   <img src="/assets/img/latset news 1.jpg" alt="" />
@@ -1036,7 +1113,11 @@
                 <a class="read-more" href="#">READ MORE +</a>
               </div>
             </div>
-            <div class="news-item">
+            <div
+              class="news-item wow fadeInLeft"
+              data-wow-delay="300ms"
+              data-wow-duration="1500ms"
+            >
               <div class="news-img-date">
                 <div class="news-img">
                   <img src="/assets/img/latset news 2.jpg" alt="" />
@@ -1063,7 +1144,11 @@
                 <a class="read-more" href="#">READ MORE +</a>
               </div>
             </div>
-            <div class="news-item">
+            <div
+              class="news-item wow fadeInLeft"
+              data-wow-delay="600ms"
+              data-wow-duration="1500ms"
+            >
               <div class="news-img-date">
                 <div class="news-img">
                   <img src="/assets/img/latset news 3.jpg" alt="" />
@@ -1398,6 +1483,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="/assets/js/parallax-scroll.js"></script>
     <script src="/assets/js/animated-headline.js"></script>
+    <script src="/assets/js/wow.min.js"></script>
     <script src="/assets/js/main.js"></script>
   </body>
 </html>
