Preloader added to all section

--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
     <title>About</title>
   </head>
   <body>
+    <div id="loader"></div>
     <header>
       <nav class="navigation-bar">
         <div class="container">
