--- a/course.html
+++ b/course.html
@@ -31,6 +31,8 @@
     <title>Course</title>
   </head>
   <body>
+    <div id="loader"></div>
+
     <header>
       <nav class="navigation-bar">
         <div class="container">
