--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <title>Home</title>
   </head>
   <body>
+    <div id="loader"></div>
     <header>
       <nav class="navigation-bar">
         <div class="container">
