--- a/instructor-details.html
+++ b/instructor-details.html
@@ -31,6 +31,8 @@
     <title>Instructor Details</title>
   </head>
   <body>
+    <div id="loader"></div>
+
     <header>
       <nav class="navigation-bar">
         <div class="container">
