--- a/blog-details-1.html
+++ b/blog-details-1.html
@@ -31,6 +31,8 @@
     <title>Blog Details</title>
   </head>
   <body>
+    <div id="loader"></div>
+
     <header>
       <nav class="navigation-bar">
         <div class="container">
