--- a/instructor.html
+++ b/instructor.html
@@ -31,6 +31,7 @@
     <title>Instructor</title>
   </head>
   <body>
+    <div id="loader"></div>
     <header>
       <nav class="navigation-bar">
         <div class="container">
