Page path problem fixed

--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
               <li class="dropdown">
                 <a href="">Blog</a>
                 <ul class="dropdown-content">
-                  <li><a target="_blank" href="blog-1.html">Blog 1</a></li>
+                  <li><a target="_blank" href="blog.html">Blog 1</a></li>
                   <li><a target="_blank" href="blog-2.html">Blog 2</a></li>
                   <li>
                     <a target="_blank" href="blog-details-1.html"
