--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <a>Blog</a>
                 <span class="fa fa-angle-down"></span>
                 <ul class="mobile-dropdown-content">
-                  <li><a target="_blank" href="blog-1.html">Blog 1</a></li>
+                  <li><a target="_blank" href="blog.html">Blog 1</a></li>
                   <li><a target="_blank" href="blog-2.html">Blog 2</a></li>
                   <li>
                     <a target="_blank" href="blog-details-1.html"
