--- a/course.html
+++ b/course.html
@@ -196,7 +196,7 @@
                 <a>Blog</a>
                 <span class="fa fa-angle-down"></span>
                 <ul class="mobile-dropdown-content">
-                  <li><a target="_blank" href="blog-1.html">Blog 1</a></li>
+                  <li><a target="_blank" href="blog.html">Blog 1</a></li>
                   <li><a target="_blank" href="blog-2.html">Blog 2</a></li>
                   <li>
                     <a target="_blank" href="blog-details-1.html"
@@ -231,7 +231,7 @@
     </header>
     <main>
       <section id="breadcrumb-banner">
-        <h1>Blog</h1>
+        <h1>Course</h1>
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
